adding dashboard metrics

--- a/src/app/admin-home/components/navpill/navpill.component.html
+++ b/src/app/admin-home/components/navpill/navpill.component.html
@@ -3,22 +3,25 @@
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link"   routerLink="/admin/users">{{'ADMIN_USERS' | translate}}</a>
   </li>
-  <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+  <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link"    routerLink="/admin/add-lang" >{{'ADMIN_LANGUAGE' | translate}}</a>
-  </li>
-  <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+  </li> -->
+  <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/refdata" >{{'ADMIN_REFDATA' | translate}}</a>
-  </li>
+  </li> -->
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/propertyNews" >{{'ADMIN_NEWS' | translate}}</a>
   </li>
-  <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+  <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/towns" >{{'ADMIN_TOWNS' | translate}}</a>
-  </li>
+  </li> -->
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/owner" >{{'ADMIN_AGENTS' | translate}}</a>
   </li>
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/properties" >{{'ADMIN_PROPERTIES' | translate}}</a>
+  </li>
+  <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+    <a class="nav-link" routerLink="/admin/dashboard-metrics" >{{'Dashboard Metrics' | translate}}</a>
   </li>
 </ul>
