--- a/src/app/admin-home/components/owner/owner.component.html
+++ b/src/app/admin-home/components/owner/owner.component.html
@@ -25,5 +25,7 @@
                 </div>
             </div>
         </form>
+        <app-data-table [Columns]="colDefinitions" [Data]='data' [(GeneralSettings)]="generalSettings"
+        [PageSettings]="pageSettings"></app-data-table>
     </div>
 </div>
