--- a/src/app/admin-home/components/navpill/navpill.component.html
+++ b/src/app/admin-home/components/navpill/navpill.component.html
@@ -1,7 +1,7 @@
 
 <ul class="nav nav-tabs">
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-    <a class="nav-link"   routerLink="/admin/users">{{'ADMIN_USERS' | translate}}</a>
+    <a class="nav-link"   routerLink="/admin/users">{{'Admin-Users' | translate}}</a>
   </li>
   <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link"    routerLink="/admin/add-lang" >{{'ADMIN_LANGUAGE' | translate}}</a>
@@ -10,18 +10,18 @@
     <a class="nav-link" routerLink="/admin/refdata" >{{'ADMIN_REFDATA' | translate}}</a>
   </li> -->
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-    <a class="nav-link" routerLink="/admin/propertyNews" >{{'ADMIN_NEWS' | translate}}</a>
+    <a class="nav-link" routerLink="/admin/propertyNews" >{{'Admin-News' | translate}}</a>
   </li>
   <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/towns" >{{'ADMIN_TOWNS' | translate}}</a>
   </li> -->
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-    <a class="nav-link" routerLink="/admin/owner" >{{'ADMIN_AGENTS' | translate}}</a>
+    <a class="nav-link" routerLink="/admin/owner" >{{'Admin-Agents' | translate}}</a>
   </li>
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/properties" >{{'ADMIN_PROPERTIES' | translate}}</a>
   </li>
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-    <a class="nav-link" routerLink="/admin/dashboard-metrics" >{{'Dashboard Metrics' | translate}}</a>
+    <a class="nav-link" routerLink="/admin/dashboard-metrics" >{{'Dashboard-Metrics' | translate}}</a>
   </li>
 </ul>
