--- a/src/app/admin-home/components/news/news.component.html
+++ b/src/app/admin-home/components/news/news.component.html
@@ -6,7 +6,7 @@
                 <div class="row">
                     <div class="col-md-3 form-group">
                         <mat-form-field>
-                            <mat-label>Property Type</mat-label>
+                            <mat-label>Post Type</mat-label>
                             <mat-select formControlName='approved'>
                               <mat-option value="">All</mat-option>
                               <mat-option value=true>Published</mat-option>
