--- a/src/app/admin-home/components/navpill/navpill.component.html
+++ b/src/app/admin-home/components/navpill/navpill.component.html
@@ -3,9 +3,9 @@
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link"   routerLink="/admin/users">{{'Admin-Users' | translate}}</a>
   </li>
-  <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+  <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link"    routerLink="/admin/add-lang" >{{'ADMIN_LANGUAGE' | translate}}</a>
-  </li> -->
+  </li>
   <!-- <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/refdata" >{{'ADMIN_REFDATA' | translate}}</a>
   </li> -->
