--- a/src/app/shared/components/bs-navbar/bs-navbar.component.html
+++ b/src/app/shared/components/bs-navbar/bs-navbar.component.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <h3><a class="projectName" href="">{{'TETOUAN_PROJECT' | translate}}</a></h3>
+      <h3><a class="projectName" href="">{{'KUNOOZ_ADMIN_PROJECT' | translate}}</a></h3>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right" *ngIf="appUser ; else anonymousUser">
